# genetic_algorithms

./: .gitignore  .travis.yaml  .travis.yml  README.md  README.rst  example.py  pyproject.toml  requirements.txt  setup.py
genetic_algorithms/: population.py
genetic_algorithms/examples/: example1_maximise_nums.py  example2_doors.py  example3.ipynb
genetic_algorithms/test/: members_util.py  test_e2e.py  test_member.py  test_population.py
src/: __init__.py  member.py
test/: test_e2e.py  test_population.py
tests/: test_e2e.py  test_population.py
